Improve build script

--- a/css/bulma.themeable.css
+++ b/css/bulma.themeable.css
@@ -6154,7 +6154,7 @@ a.list-item {
 }
 
 .message.is-black {
-  background-color: #fafafa;
+  background-color: #0a0a0a;
 }
 
 .message.is-black .message-header {
@@ -6167,7 +6167,7 @@ a.list-item {
 }
 
 .message.is-light {
-  background-color: #fafafa;
+  background-color: whitesmoke;
 }
 
 .message.is-light .message-header {
@@ -6180,7 +6180,7 @@ a.list-item {
 }
 
 .message.is-dark {
-  background-color: #fafafa;
+  background-color: #363636;
 }
 
 .message.is-dark .message-header {
@@ -7916,7 +7916,7 @@ label.panel-block:hover {
   color: var(--bulma-tabs-link-color);
   display: flex;
   justify-content: center;
-  margin-bottom: -var(--bulma-tabs-border-bottom-width);
+  margin-bottom: calc(-1 * var(--bulma-tabs-border-bottom-width));
   padding: var(--bulma-tabs-link-padding);
   vertical-align: top;
 }
