--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -45,7 +45,7 @@ $tabs-toggle-link-active-color: $link-invert !default
     color: v(tabs-link-color, $tabs-link-color)
     display: flex
     justify-content: center
-    margin-bottom: -#{v(tabs-border-bottom-width, $tabs-border-bottom-width)}
+    margin-bottom: calc(-1 * #{v(tabs-border-bottom-width, $tabs-border-bottom-width)})
     padding: v(tabs-link-padding, $tabs-link-padding)
     vertical-align: top
     &:hover
