--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1,12 +1,4 @@
 /*! bulma.io v0.8.2 | MIT License | github.com/jgthms/bulma */
-@-webkit-keyframes spinAround {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(359deg);
-  }
-}
 @keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -129,8 +121,7 @@
 }
 
 .button.is-loading::after, .loader, .select.is-loading::after, .control.is-loading::after {
-  -webkit-animation: spinAround 500ms infinite linear;
-          animation: spinAround 500ms infinite linear;
+  animation: spinAround 500ms infinite linear;
   border: 2px solid #dbdbdb;
   border-radius: 290486px;
   border-right-color: transparent;
@@ -317,10 +308,7 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   text-rendering: optimizeLegibility;
-  -webkit-text-size-adjust: 100%;
-     -moz-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
-          text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 article,
@@ -1591,18 +1579,18 @@ a.box:active {
 }
 
 .button .icon:first-child:not(:last-child) {
-  margin-left: calc(-0.5em - 1px);
-  margin-right: 0.25em;
+  margin-left: calc(-1 / 2 * 1em - 1px);
+  margin-right: calc(1em / 4);
 }
 
 .button .icon:last-child:not(:first-child) {
-  margin-left: 0.25em;
-  margin-right: calc(-0.5em - 1px);
+  margin-left: calc(1em / 4);
+  margin-right: calc(-1 / 2 * 1em - 1px);
 }
 
 .button .icon:first-child:last-child {
-  margin-left: calc(-0.5em - 1px);
-  margin-right: calc(-0.5em - 1px);
+  margin-left: calc(-1 / 2 * 1em - 1px);
+  margin-right: calc(-1 / 2 * 1em - 1px);
 }
 
 .button:hover, .button.is-hovered {
@@ -2847,8 +2835,8 @@ fieldset[disabled] .button {
 
 .button.is-loading::after {
   position: absolute;
-  left: calc(50% - 0.5em);
-  top: calc(50% - 0.5em);
+  left: calc(50% - (1em / 2));
+  top: calc(50% - (1em / 2));
   position: absolute !important;
 }
 
@@ -2862,8 +2850,8 @@ fieldset[disabled] .button {
 
 .button.is-rounded {
   border-radius: 290486px;
-  padding-left: 1.25em;
-  padding-right: 1.25em;
+  padding-left: calc(1em + 0.25em);
+  padding-right: calc(1em + 0.25em);
 }
 
 .buttons {
@@ -2968,31 +2956,31 @@ fieldset[disabled] .button {
 
 @media screen and (min-width: 1024px) {
   .container {
-    max-width: 960px;
+    max-width: calc(1024px - 64px);
   }
 }
 
 @media screen and (max-width: 1215px) {
   .container.is-widescreen {
-    max-width: 1152px;
+    max-width: calc(1216px - 64px);
   }
 }
 
 @media screen and (max-width: 1407px) {
   .container.is-fullhd {
-    max-width: 1344px;
+    max-width: calc(1408px - 64px);
   }
 }
 
 @media screen and (min-width: 1216px) {
   .container {
-    max-width: 1152px;
+    max-width: calc(1216px - 64px);
   }
 }
 
 @media screen and (min-width: 1408px) {
   .container {
-    max-width: 1344px;
+    max-width: calc(1408px - 64px);
   }
 }
 
@@ -3667,14 +3655,10 @@ fieldset[disabled] .button {
 }
 
 .progress:indeterminate {
-  -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-name: moveIndeterminate;
-          animation-name: moveIndeterminate;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-name: moveIndeterminate;
+  animation-timing-function: linear;
   background-color: #ededed;
   background-image: linear-gradient(to right, #4a4a4a 30%, #ededed 30%);
   background-position: top left;
@@ -3700,15 +3684,6 @@ fieldset[disabled] .button {
 
 .progress.is-large {
   height: 1.5rem;
-}
-
-@-webkit-keyframes moveIndeterminate {
-  from {
-    background-position: 200% 0;
-  }
-  to {
-    background-position: -200% 0;
-  }
 }
 
 @keyframes moveIndeterminate {
@@ -4504,8 +4479,8 @@ fieldset[disabled] .select select:-ms-input-placeholder,
 
 .input.is-rounded {
   border-radius: 290486px;
-  padding-left: calc(1.125em - 1px);
-  padding-right: calc(1.125em - 1px);
+  padding-left: calc(calc(0.75em - 1px) + 0.375em);
+  padding-right: calc(calc(0.75em - 1px) + 0.375em);
 }
 
 .input.is-static {
@@ -7424,7 +7399,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     display: block;
     opacity: 0;
     pointer-events: none;
-    top: calc(100% + -4px);
+    top: calc(100% + (-4px));
     transform: translateY(-5px);
     transition-duration: 86ms;
     transition-property: opacity, transform;
@@ -7915,7 +7890,7 @@ label.panel-block:hover {
   color: #4a4a4a;
   display: flex;
   justify-content: center;
-  margin-bottom: -1px;
+  margin-bottom: calc(-1 * 1px);
   padding: 0.5em 1em;
   vertical-align: top;
 }
@@ -8013,7 +7988,7 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle li + li {
-  margin-left: -1px;
+  margin-left: calc(-1 * 1px);
 }
 
 .tabs.is-toggle li:first-child a {
@@ -9261,11 +9236,11 @@ label.panel-block:hover {
 }
 
 .columns {
-  margin: -0.75rem;
+  margin: calc(-1 * 0.75rem);
 }
 
 .columns:not(:last-child) {
-  margin-bottom: 0.75rem;
+  margin-bottom: calc(1.5rem - 0.75rem);
 }
 
 .columns.is-centered {
@@ -9317,8 +9292,8 @@ label.panel-block:hover {
 
 .columns.is-variable {
   --columnGap: 0.75rem;
-  margin-left: calc(-1*var(--columnGap));
-  margin-right: calc(-1*var(--columnGap));
+  margin-left: calc(-1 * var(--columnGap));
+  margin-right: calc(-1 * var(--columnGap));
 }
 
 .columns.is-variable .column {
@@ -9854,13 +9829,11 @@ label.panel-block:hover {
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
-  min-height: -webkit-min-content;
-  min-height: -moz-min-content;
   min-height: min-content;
 }
 
 .tile.is-ancestor {
-  margin: -0.75rem;
+  margin: calc(0.75rem * -1);
 }
 
 .tile.is-ancestor:not(:last-child) {
@@ -10841,5 +10814,3 @@ label.panel-block:hover {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
 }
-
-/*# sourceMappingURL=bulma.css.map */
