Forgotten replacements and add variable-list to gitignore

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -17,7 +17,7 @@ $breadcrumb-item-separator-color: $border-hover !default
     color: v(breadcrumb-item-color, $breadcrumb-item-color)
     display: flex
     justify-content: center
-    padding: v(breadcrumb-item-padding-vertical, $breadcrumb-item-padding-vertical) $breadcrumb-item-padding-horizontal
+    padding: v(breadcrumb-item-padding-vertical, $breadcrumb-item-padding-vertical) v(breadcrumb-item-padding-horizontal, $breadcrumb-item-padding-horizontal)
     &:hover
       color: v(breadcrumb-item-hover-color, $breadcrumb-item-hover-color)
   li
