--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -64,7 +64,7 @@ $message-colors: $colors !default
 .message-header
   align-items: center
   background-color: v(message-header-background-color, $message-header-background-color)
-  border-radius: v(message-header-radius, $message-header-radius) $message-header-radius 0 0
+  border-radius: v(message-header-radius, $message-header-radius) v(message-header-radius, $message-header-radius) 0 0
   color: v(message-header-color, $message-header-color)
   display: flex
   font-weight: v(message-header-weight, $message-header-weight)
