Get rid of unnecessary tmp var file

--- a/css/bulma.themeable.css
+++ b/css/bulma.themeable.css
@@ -5607,7 +5607,7 @@ fieldset[disabled] .select select:hover {
   color: var(--bulma-breadcrumb-item-color);
   display: flex;
   justify-content: center;
-  padding: var(--bulma-breadcrumb-item-padding-vertical) 0.75em;
+  padding: var(--bulma-breadcrumb-item-padding-vertical) var(--bulma-breadcrumb-item-padding-horizontal);
 }
 
 .breadcrumb a:hover {
@@ -6279,7 +6279,7 @@ a.list-item {
 .message-header {
   align-items: center;
   background-color: var(--bulma-message-header-background-color);
-  border-radius: var(--bulma-message-header-radius) 4px 0 0;
+  border-radius: var(--bulma-message-header-radius) var(--bulma-message-header-radius) 0 0;
   color: var(--bulma-message-header-color);
   display: flex;
   font-weight: var(--bulma-message-header-weight);
@@ -11176,6 +11176,7 @@ label.panel-block:hover {
   --bulma-input-icon-color: #dbdbdb;
   --bulma-breadcrumb-item-color: #3273dc;
   --bulma-breadcrumb-item-padding-vertical: 0;
+  --bulma-breadcrumb-item-padding-horizontal: 0.75em;
   --bulma-breadcrumb-item-hover-color: #353535;
   --bulma-breadcrumb-item-active-color: #353535;
   --bulma-breadcrumb-item-separator-color: #b5b5b5;
