--- a/sass/themeable/css-variables.sass
+++ b/sass/themeable/css-variables.sass
@@ -1,5 +1,5 @@
-@import 'variable-list.sass'
-
+@mixin defineVariable($var, $value)
+  --bulma-#{$var}: #{$value}
 
 @if variable-exists(themeable)
   @if $themeable == "any"
