--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -309,7 +309,7 @@ th {
 
 td:not([align]),
 th:not([align]) {
-  text-align: left;
+  text-align: inherit;
 }
 
 html {
@@ -442,7 +442,7 @@ table th {
 
 table td:not([align]),
 table th:not([align]) {
-  text-align: left;
+  text-align: inherit;
 }
 
 table th {
@@ -2066,7 +2066,7 @@ fieldset[disabled] .button {
 }
 
 .content table th:not([align]) {
-  text-align: left;
+  text-align: inherit;
 }
 
 .content table thead td,
@@ -2263,8 +2263,8 @@ fieldset[disabled] .button {
 .notification {
   background-color: whitesmoke;
   border-radius: 4px;
-  padding: 1.25rem 2.5rem 1.25rem 1.5rem;
   position: relative;
+  padding: 1.25rem 2.5rem 1.25rem 1.5rem;
 }
 
 .notification a:not(.button):not(.dropdown-item) {
@@ -2286,8 +2286,8 @@ fieldset[disabled] .button {
 }
 
 .notification > .delete {
-  position: absolute;
   right: 0.5rem;
+  position: absolute;
   top: 0.5rem;
 }
 
@@ -2732,7 +2732,7 @@ fieldset[disabled] .button {
 }
 
 .table th:not([align]) {
-  text-align: left;
+  text-align: inherit;
 }
 
 .table tr.is-selected {
@@ -2880,13 +2880,13 @@ fieldset[disabled] .button {
 
 .tags.has-addons .tag:not(:first-child) {
   margin-left: 0;
-  border-bottom-left-radius: 0;
   border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .tags.has-addons .tag:not(:last-child) {
-  border-bottom-right-radius: 0;
   border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .tag:not(body) {
@@ -4139,7 +4139,7 @@ fieldset[disabled] .select select:hover {
   display: block;
   max-width: 16em;
   overflow: hidden;
-  text-align: left;
+  text-align: inherit;
   text-overflow: ellipsis;
 }
 
@@ -4422,7 +4422,7 @@ fieldset[disabled] .select select:hover {
   clear: both;
   font-size: 1rem;
   position: relative;
-  text-align: left;
+  text-align: inherit;
 }
 
 .control.has-icons-left .input:focus ~ .icon,
@@ -4710,7 +4710,7 @@ fieldset[disabled] .select select:hover {
 a.dropdown-item,
 button.dropdown-item {
   padding-right: 3rem;
-  text-align: left;
+  text-align: inherit;
   white-space: nowrap;
   width: 100%;
 }
@@ -4850,7 +4850,7 @@ button.dropdown-item.is-active {
 .media {
   align-items: flex-start;
   display: flex;
-  text-align: left;
+  text-align: inherit;
 }
 
 .media .content:not(:last-child) {
@@ -4906,7 +4906,7 @@ button.dropdown-item.is-active {
   flex-basis: auto;
   flex-grow: 1;
   flex-shrink: 1;
-  text-align: left;
+  text-align: inherit;
 }
 
 @media screen and (max-width: 768px) {
@@ -6299,11 +6299,11 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   }
   .navbar > .container .navbar-brand,
   .container > .navbar .navbar-brand {
-    margin-left: -.75rem;
+    margin-left: -0.75rem;
   }
   .navbar > .container .navbar-menu,
   .container > .navbar .navbar-menu {
-    margin-right: -.75rem;
+    margin-right: -0.75rem;
   }
   .navbar.is-fixed-bottom-desktop, .navbar.is-fixed-top-desktop {
     left: 0;
@@ -6883,8 +6883,8 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle li:last-child a {
-  border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .tabs.is-toggle li.is-active a {
@@ -15071,23 +15071,6 @@ svg {
 }
 
 .bd-sponsor-item strong,
-.bd-sponsor-item img {
-  position: relative;
-}
-
-.bd-partner-sponsor.is-text .bd-sponsor-item {
-  display: inline;
-}
-
-.bd-partner-sponsor.is-text .bd-sponsor-item:before {
-  display: none;
-}
-
-.bd-sponsor-item {
-  flex-grow: 1;
-  position: relative;
-}
-
 .bd-sponsor-item img {
   position: relative;
 }
